# scdms-backend/src/assets/OpenAPI.json
@@ -36,6 +36,68 @@
         "tags": ["oauth"]
       }
     },
+    "/oauth/discord/clientid": {
+      "get": {
+        "operationId": "get_oauth_discord_clientid",
+        "summary": "Gets the discord OAuth App Client ID",
+        "description": "Returns the discord OAuth App Client ID to allow external authentication",
+        "tags": ["oauth"],
+        "responses": {
+          "200": {
+            "description": "OAuth Discord Client ID",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status", "clientid"],
+                  "properties": {
+                    "status": { "type": "boolean", "default": true },
+                    "clientid": { "type": "string" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/oauth/discord/state": {
+      "post": {
+        "operationId": "post_oauth_discord_state",
+        "summary": "POSTs to the server a state",
+        "description": "Appends to the states object a new state ID to allow external authentication",
+        "tags": ["oauth"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["state"],
+                "properties": {
+                  "state": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": ["status"],
+                  "properties": {
+                    "status": { "type": "boolean", "default": true }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/oauth/discord/finalize": {
       "get": {
         "operationId": "get_oauth_discord_finalize",
